# untangled

./: README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/: saved-directories.tsx  search.tsx  select-directory.tsx  title-bar.tsx
components/ui/: delete-alert.tsx
lib/: atoms.ts  constants.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: file_extension.rs  indexer.rs  main.rs
