[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = [ "shell-all", "dialog-open", "dialog"] }
tantivy = "0.22.0"
notify = { version = "6.1.1", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
anyhow = "1.0.86"
tempfile = "3.6.0"
walkdir = "2.5.0"
pdf-extract = "0.7.9"
docx-rs = "0.4.17"
calamine = "0.21.2"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
open = "3.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
